# gh-release-devpi

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
gh_release_devpi/: main.py
